# rattler-build-monorepo

./: .gitignore  README.md
.rattler/: recipe.yaml
apps/app_a/: pyproject.toml
apps/app_a/app_a/: cli.py
apps/app_a/tests/: test_cli.py
apps/app_b/: pyproject.toml
apps/app_b/app_b/: cli.py
apps/app_b/tests/: test_cli.py
libs/.rattler/: recipe.yaml
libs/nm_a/: pyproject.toml
libs/nm_a/nm_a/: some_func.py
libs/nm_a/tests/: test_nm_a.py
libs/nm_b/: pyproject.toml
libs/nm_b/nm_b/: some_func.py
libs/nm_b/tests/: test_nm_b.py
libs/nm_c/: CMakeLists.txt  pyproject.toml
libs/nm_c/cpp/: libnm_c.cpp
libs/nm_c/nm_c/: __init__.py  some_func.py
libs/nm_c/tests/: test_libnm_c.py  test_nm_c.py
